# OpenGL-Renderer

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Logger.cpp  Logger.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  framework.cpp  framework.h  graphics.cpp  graphics.h  main.cpp
src/shaders/: fragment_shader.frag  vertex_shader.vert
